# agentic-loop

./: .gitignore  README.md  config.yaml  pyproject.toml
src/: cli.py  config.py  context.py  models.py  runner.py  task_loader.py
src/llm/: base.py  claude_provider.py  factory.py  openai_provider.py
tasks/cli-calculator/: task.md
tasks/explain-agentic-loops/: task.md
tests/: test_context.py  test_llm_providers.py  test_runner.py  test_task_loader.py
